src/objects/Position__c.object
<CustomObject>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description_Position__c</fullName>
        <label>Description Position</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Odessa</fullName>
                </value>
                <value>
                    <fullName>Lviv</fullName>
                </value>
                <value>
                    <fullName>Kiev</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_Salary__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Max Salary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Salary__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Min Salary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Open_Date__c</fullName>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Publication_Time__c</fullName>
        <label>Publication Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Requirements__c</fullName>
        <label>Requirements</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <label>Salary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Skills__c</fullName>
        <label>Skills</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Good communication</fullName>
                </value>
                <value>
                    <fullName>Highly motiiveted</fullName>
                </value>
                <value>
                    <fullName>Analytical approach</fullName>
                </value>
                <value>
                    <fullName>Ability to learn non-stop</fullName>
                </value>
                <value>
                    <fullName>The ability to learn concepts and apply them to other problems</fullName>
                </value>
                <value>
                    <fullName>Basic mathematical skills</fullName>
                </value>
                <value>
                    <fullName>A passion for problem solving</fullName>
                </value>
                <value>
                    <fullName>Good writing skills</fullName>
                </value>
                <value>
                    <fullName>Confidence around a computer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Close</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Position</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>List_View</fullName>
        <columns>NAME</columns>
        <columns>Description_Position__c</columns>
        <columns>Education__c</columns>
        <columns>Location__c</columns>
        <columns>Salary__c</columns>
        <columns>Skills__c</columns>
        <columns>Requirements__c</columns>
        <columns>Status__c</columns>
        <columns>Open_Date__c</columns>
        <columns>Close_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>List View</label>
    </listViews>
    <nameField>
        <label>Position Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Positions</pluralLabel>
    <recordTypes>
        <fullName>Admin</fullName>
        <active>true</active>
        <label>Admin</label>
    </recordTypes>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>Practice</fullName>
        <active>true</active>
        <label>Practice</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tech</fullName>
        <active>true</active>
        <label>Tech</label>
    </recordTypes>
    <recordTypes>
        <fullName>Test</fullName>
        <active>true</active>
        <label>Test</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>